--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-cache-assets": "^2.0.2",
     "axios": "^0.19.2",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "flat-cache": "^2.0.1",
     "moment": "^2.26.0",
