--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "author": "Jérôme Coupé",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "axios": "^0.19.2",
-    "chalk": "^4.1.0",
-    "dotenv": "^8.2.0",
-    "flat-cache": "^2.0.1",
-    "moment": "^2.26.0",
-    "node-fetch": "^2.6.1"
+    "@11ty/eleventy": "^1.0.2",
+    "axios": "^1.2.1",
+    "browser-sync": "^2.27.10",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.0.3",
+    "flat-cache": "^3.0.4",
+    "moment": "^2.29.4",
+    "node-fetch": "^3.3.0"
   }
 }
